--- a/lab8/src/App.css
+++ b/lab8/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 480px;
+    width: 92vw;
+    border-radius: 24px;
+    box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.2);
+    background-color: #aaaaaa80;
+    margin: 4vh 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title {
+    max-width: 480px;
+    width: 92vw;
+    background-color: #aaa;
+    text-align: center;
+    border-top-left-radius: 24px;
+    border-top-right-radius: 24px;
+    margin: 0;
+    padding: 4px;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.24);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title:hover {
+    cursor: default;
 }
